<?xml version="1.0"?>
<package format="2">
  <name>ament_package</name>
  <version>0.0.0</version>
  <description>The parser for the manifest files in the ament buildsystem.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>python3</buildtool_depend>

  <buildtool_export_depend>python3</buildtool_export_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
